--- a/index.css
+++ b/index.css
@@ -3,4 +3,11 @@
 body {
   background-color: #0a0a0a;
   color: #e5e5e5;
+  font-size: 14px;
+}
+
+@media (min-width: 640px) {
+  body {
+    font-size: 16px;
+  }
 }
